# snake

./: CNAME  Cargo.toml  README.md  Trunk.toml  index.html  rustfmt.toml  snake-7d1a7df6534329d4.js  snake-89fdc812dedcd78a.js  snake-9ce5cb98c560d3e7.js  snake-b201ef8bf3cb318c.js  snake-b7c2e856721ee824.js  snake-c024820ed6330b90.js  snake-c024820ed6330b90_bg.wasm  snake-cf056ac67b488da9.js  snake-dd7fb7e33b0274d.js  snake-e0bfba8ed9eef9a2.js  snake-e0f201a516cb1ee.js  snake-f25289e6b5bde5c4.js  snake-f49c4148b33b1117.js
.cargo/: config.toml
.github/workflows/: cargo.yml  release.yml
scripts/: desktop-dev.sh  tooling.sh  wasm-dev.sh
src/: lib.rs  main.rs  palette.rs  web.rs
src/macro/: ezinput.rs  mod.rs
src/math/: mod.rs  pythagoras.rs
src/player/: entity.rs  input.rs  plugin.rs
src/screen/: loading.rs  main_menu.rs  plugin.rs
src/world/: camera.rs  light.rs  plugin.rs
static/: styles.css  workaround.js
tools/lint/: Cargo.toml
tools/lint/src/: main.rs
