[package]
name = "snake"
version = "0.1.0"
edition = "2021"
repository = "https://git.exst.fun/snake"
license = "MIT"
authors = ["Pedro Henrique <hello@exst.fun>"]
categories = ["game", "bevy", "snake", "desktop", "webassembly"]
description = "A reimplementation of the classic snake game written in Rust." 

[workspace]
members = ["./", "tools/lint"]
 
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", features = ["serialize"] }
ezinput = { git = "https://git.exst.fun/ezinput", branch = "bevy_main" }
futures = "^0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = "^0.3"
gloo-events = "^0.1"

[dev-dependencies]
wasm-bindgen-test = "^0.3"